# cmd_server

./: Cargo.toml
css/: wotah.css
src/: main.rs
templates/: index.tera  login.tera
