[package]
name = "cmd_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4", features = [ "tls" ] }
rocket_contrib = { version = "0.4", features = [ "tera_templates" ] }
serde = { version = "1.0", features = [ "std", "derive" ] }
serde_json = "1.0"
chrono = "0.4"
md5 = "0.7"
rand = "0.8"
home = "0.5"